--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.217", features = ["derive"] }
+toml = "0.8.20"
 windows = { version = "0.59.0", features = ["Win32_System_EventLog", "Win32_Security"] }
 windows-service = "0.7.0"
