--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 aws-config = "1.5.17"
 aws-sdk-cloudwatchlogs = "1.71.0"
 aws-types = "1.3.5"
+mockall = "0.13.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.139"
 tokio = "1.43.0"
 toml = "0.8.20"
-windows = { version = "0.59.0", features = ["Win32_System_EventLog", "Win32_Security"] }
+windows = { version = "0.59.0", features = ["Win32_System_EventLog", "Win32_Security", "Win32_System_Threading", "Win32_Foundation"] }
 windows-service = "0.7.0"
